--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -37,7 +37,9 @@ blocks:
         commands:
           - checkout
           - cache restore gems-$SEMAPHORE_GIT_BRANCH-$(checksum Gemfile.lock)
+          - sem-service start postgres
           - bundle install --deployment --path vendor/bundle
+          - bundle exec rake db:setup
       jobs:
         - name: Test all the things
           commands:
