--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,9 @@ development:
 test:
   <<: *default
   database: test_sempahore2_test
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  username: postgres
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
