--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -14,4 +14,4 @@ ENTRYPOINT ["entrypoint.sh"]
 EXPOSE 3000
 
 # Start the main process.
-CMD ["rails", "server", "-b", "0.0.0.0:$PORT"]
+CMD ["rm -f /myapp/tmp/pids/server.pid &&" "rails", "server", "-b", "0.0.0.0:$PORT"]
