--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -6,8 +6,9 @@ COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 RUN bundle install
 COPY . /app
-COPY start_web.sh /app
 
+COPY start_web.sh /app
+RUN chmod +x /app/start_web.sh
 # Add a script to be executed every time the container starts.
 #COPY entrypoint.sh /usr/bin/
 #RUN chmod +x /usr/bin/entrypoint.sh
