--- a/.semaphore/heroku_staging_docker.yml
+++ b/.semaphore/heroku_staging_docker.yml
@@ -29,7 +29,7 @@ blocks:
           # Assets
           - cache restore gems-$SEMAPHORE_GIT_BRANCH-$(checksum Gemfile.lock),gems-$SEMAPHORE_GIT_BRANCH,gems-master
           - bundle install --deployment --path vendor/bundle
-          - RAILS_ENV=production rails assets:precompile
+          - RAILS_ENV=production bundle exec rails assets:precompile
 
 
           # sets HEROKU_API_KEY
