--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -4,7 +4,7 @@ RUN mkdir /app
 WORKDIR /app
 COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
-RUN bundle install
+RUN bundle install --path=vendor/bundle
 COPY . /app
 
 # Add a script to be executed every time the container starts.
