--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -14,4 +14,4 @@ ENTRYPOINT ["entrypoint.sh"]
 EXPOSE 3000
 
 # Start the main process.
-CMD ["rails", "db:migrate"]
+CMD ["bundle", "exec", "rails", "db:migrate"]
